<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/registerFragment">
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.estebancoloradogonzalez.listify.view.RegisterFragment"
        android:label="@string/fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_userBudgetFragment"
            app:destination="@id/userBudgetFragment" />
    </fragment>
    <fragment
        android:id="@+id/userBudgetFragment"
        android:name="com.estebancoloradogonzalez.listify.view.UserBudgetFragment"
        android:label="@string/fragment_user_budget"
        tools:layout="@layout/fragment_user_budget" >
        <action
            android:id="@+id/action_userBudgetFragment_to_shoppingListsFragment"
            app:destination="@id/shoppingListsFragment" />
        <argument
            android:name="userName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/shoppingListsFragment"
        android:name="com.estebancoloradogonzalez.listify.view.ShoppingListsFragment"
        android:label="@string/fragment_shopping_lists"
        tools:layout="@layout/fragment_shopping_lists" >
        <argument
            android:name="userId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_shoppingListsFragment_to_shoppingListFragment"
            app:destination="@id/shoppingListFragment" />
        <action
            android:id="@+id/action_shoppingListsFragment_to_generateShoppingListFragment"
            app:destination="@id/generateShoppingListFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.estebancoloradogonzalez.listify.view.SettingsFragment"
        android:label="@string/fragment_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/productsFragment"
        android:name="com.estebancoloradogonzalez.listify.view.ProductsFragment"
        android:label="@string/fragment_products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_productsFragment_to_createProductFragment"
            app:destination="@id/createProductFragment" />
        <action
            android:id="@+id/action_productsFragment_to_updateProductFragment"
            app:destination="@id/updateProductFragment" />
        <action
            android:id="@+id/action_productsFragment_to_categoriesFragment"
            app:destination="@id/categoriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.estebancoloradogonzalez.listify.view.CategoriesFragment"
        android:label="@string/fragment_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_categoriesFragment_to_updateCategoryFragment"
            app:destination="@id/updateCategoryFragment" />
        <action
            android:id="@+id/action_categoriesFragment_to_createCategoryFragment"
            app:destination="@id/createCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/createCategoryFragment"
        android:name="com.estebancoloradogonzalez.listify.view.CreateCategoryFragment"
        android:label="@string/fragment_create_category"
        tools:layout="@layout/fragment_create_category" />
    <fragment
        android:id="@+id/createProductFragment"
        android:name="com.estebancoloradogonzalez.listify.view.CreateProductFragment"
        android:label="@string/fragment_create_product"
        tools:layout="@layout/fragment_create_product" >
        <argument
            android:name="userId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/updateCategoryFragment"
        android:name="com.estebancoloradogonzalez.listify.view.UpdateCategoryFragment"
        android:label="@string/fragment_update_category"
        tools:layout="@layout/fragment_update_category" >
        <argument
            android:name="categoryId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/updateProductFragment"
        android:name="com.estebancoloradogonzalez.listify.view.UpdateProductFragment"
        android:label="@string/fragment_update_product"
        tools:layout="@layout/fragment_update_product" >
        <argument
            android:name="productId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/shoppingListFragment"
        android:name="com.estebancoloradogonzalez.listify.view.ShoppingListFragment"
        android:label="@string/fragment_shopping_list"
        tools:layout="@layout/fragment_shopping_list" >
        <argument
            android:name="shoppingListId"
            app:argType="long" />
        <action
            android:id="@+id/action_shoppingListFragment_to_establishmentFragment"
            app:destination="@id/establishmentFragment" />
    </fragment>
    <fragment
        android:id="@+id/generateShoppingListFragment"
        android:name="com.estebancoloradogonzalez.listify.view.GenerateShoppingListFragment"
        android:label="@string/fragment_generate_shopping_list"
        tools:layout="@layout/fragment_generate_shopping_list" >
        <argument
            android:name="userId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/establishmentFragment"
        android:name="com.estebancoloradogonzalez.listify.view.EstablishmentFragment"
        android:label="@string/fragment_establishment"
        tools:layout="@layout/fragment_establishment" >
        <argument android:name="establishmentName"
            app:argType="string" />
        <action
            android:id="@+id/action_establishmentFragment_to_productFragment"
            app:destination="@id/productFragment" />
        <action
            android:id="@+id/action_establishmentFragment_to_selectProductFragment"
            app:destination="@id/selectProductFragment" />
        <argument
            android:name="shoppingListId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/productFragment"
        android:name="com.estebancoloradogonzalez.listify.view.ProductFragment"
        android:label="@string/fragment_product"
        tools:layout="@layout/fragment_product" >
        <argument
            android:name="productShoppingListId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/selectProductFragment"
        android:name="com.estebancoloradogonzalez.listify.view.SelectProductFragment"
        android:label="@string/fragment_select_product"
        tools:layout="@layout/fragment_select_product" >
        <argument android:name="shoppingListId"
            app:argType="long" />
    </fragment>
</navigation>