<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.SelectProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo_application"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/actvProducts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/select_product"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.88"/>

        <Button
            android:id="@+id/btnSelectProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/actvProducts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.88"/>

        <TextView
            android:id="@+id/tvNoProducts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_products_to_select"
            android:textSize="16sp"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.88"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
