<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoppingListRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ShoppingListFragment">

    <TextView
        android:id="@+id/tvShoppingListDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"/>

    <TextView
        android:id="@+id/tvShoppingListTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_total"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"/>

    <!-- RecyclerView ocupa hasta el TextView de error -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEstablishments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvShoppingListDate"
        app:layout_constraintBottom_toTopOf="@id/tvErrorMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- TextView para mostrar errores, justo encima de los botones -->
    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/rvEstablishments"
        app:layout_constraintBottom_toTopOf="@id/guidelineButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginBottom="8dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="80dp"
        app:layout_constraintGuide_percent="0.92"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/btnCompleteShoppingList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCancelShoppingList"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintWidth_percent="0.45"/>

    <Button
        android:id="@+id/btnCancelShoppingList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCompleteShoppingList"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintWidth_percent="0.45"/>
</androidx.constraintlayout.widget.ConstraintLayout>
