<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/productsRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProductsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTotalExpenditure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp">

        <TextView
            android:id="@+id/tvTotalExpenditure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gasto_total"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="16dp"/>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_categories"
        app:layout_constraintTop_toBottomOf="@id/cardTotalExpenditure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/btnCategories"
        app:layout_constraintBottom_toTopOf="@id/fabAddProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_button"
        android:contentDescription="@string/fragment_create_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
